fix: z-index without vars

--- a/source/utilities/z-index/style.scss
+++ b/source/utilities/z-index/style.scss
@@ -1,19 +1,17 @@
-@use "../setting/var_properties";
-
 @for $i from 1 through 10 {
 
     .u-level-#{$i},
     .u-level--#{$i} {
-        z-index: ($i*1000) !important;
+        z-index: ($i*1000);
     }
 }
 
 .u-level-top,
 .u-level--top {
-    z-index: #{var_properties.$level-top} !important;
+    z-index: 9999;
 }
 
 .u-level-bottom,
 .u-level--bottom {
-    z-index: #{var_properties.$level-bottom} !important;
+    z-index: 1;
 }
